# vemc2

./: .gitignore  LICENSE  Makefile  README.md  plan.txt  structure.txt  vemc.cbp
Program/dev/: getintodev.sh
cons/: CMakeLists.txt  Makefile  includesfm.h  main.cpp  portablestart.sh  start.sh
core/: CMakeLists.txt  Makefile  define.h  myMath.h  simulation.h  universe.cpp  universe.h
core/effect/: effect.cpp  effect.h  gravitation.cpp  gravitation.h  inertia.cpp  inertia.h  recorder.cpp  recorder.h
core/field/: Efield.h  Gfield.cpp  Gfield.h  field.cpp  field.h
core/mymath/: eld.cpp  eld.h  math_struct.h  vec3bdt.cpp  vec3bdt.h  vector.cpp  vector.h
core/object/: body.cpp  body.h  drawable.cpp  drawable.h  noobject.cpp  noobject.h  object.cpp  object.h  quant.cpp  quant.h
core/parser/: parser.cpp  parser.h
core/settings/: ccs.cpp  settingdefines.h  settings.cpp  settings.h
core/simulation/: effectthread.cpp  effectthread.h  sim_thread.cpp  sim_thread.h
graphic/: Makefile  draws.cpp  draws.h  graphic.cpp  graphic.h  main.cpp
